init by codex